Pinned Python 3.10 and fixed model device for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 streamlit
-transformers
-torch
-nltk
-scikit-learn
-wordcloud
-python-docx
-PyPDF2
-sentencepiece
+transformers==4.44.2
+torch==2.2.2
 rouge-score
 python-docx
 PyPDF2
+
